tests/baselines/reference/decoratorOnClassMethodOverload1(strict=true).errors.txt
decoratorOnClassMethodOverload1.ts(4,5): error TS1249: A decorator can only decorate a method implementation, not an overload.
decoratorOnClassMethodOverload1.ts(5,5): error TS7010: 'method', which lacks return-type annotation, implicitly has an 'any' return type.


==== decoratorOnClassMethodOverload1.ts (2 errors) ====
    declare function dec<T>(target: any, propertyKey: string, descriptor: TypedPropertyDescriptor<T>): TypedPropertyDescriptor<T>;
    
    class C {
        @dec
        ~
!!! error TS1249: A decorator can only decorate a method implementation, not an overload.
        method()
        ~~~~~~
!!! error TS7010: 'method', which lacks return-type annotation, implicitly has an 'any' return type.
        method() { }
    }